[package]
name = "sspse"
version = "0.1.0"
authors = ["Maximilian Luz <luzmaximilian@gmail.com>"]
edition = "2018"
exclude = [ "paper/**", "params/**" ]

[lib]
name="sspse"
path="src/lib.rs"

[[bin]]
name="noisereduce"
path="bin/noisereduce.rs"

[dependencies]
hound = "3.4.0"
rustfft = "3.0.0"
gnuplot = "0.0.31"
rand = "0.6.5"
num = "0.2.0"
ndarray = "0.12.1"
sample = { git = "https://github.com/RustAudio/sample" }
GSL = "1.1.0"
clap = "2.33.0"
serde = { version = "1.0.94", features = ["derive"] }
serde_yaml = "0.8.9"
snafu = "0.4.1"
