[package]
name = "sspse"
version = "0.1.0"
authors = ["Maximilian Luz <luzmaximilian@gmail.com>"]
edition = "2018"
exclude = [ "paper/**", "params/**" ]

[lib]
name="sspse"
path="src/lib.rs"

[[bin]]
name="noisereduce"
path="bin/noisereduce.rs"

[dependencies]
hound = "3.4.0"
rustfft = "3.0.0"
gnuplot = "0.0.37"
rand = "0.7.3"
num = "0.2.0"
ndarray = "0.13.1"
dasp = { version = "0.11.0", features = ["signal", "interpolate", "interpolate-sinc", "ring_buffer"] }
GSL = "1.1.0"
clap = "2.33.0"
serde = { version = "1.0.94", features = ["derive"] }
serde_yaml = "0.8.9"
snafu = "0.6.8"
