[package]
name = "sspse"
version = "0.1.0"
authors = ["Maximilian Luz <luzmaximilian@gmail.com>"]
edition = "2018"
exclude = [ "paper/**", "params/**" ]

[lib]
name="sspse"
path="src/lib.rs"

[[bin]]
name="noisereduce"
path="bin/noisereduce.rs"

[dependencies]
hound = "3.5.0"
rustfft = "6.0.1"
gnuplot = "0.0.37"
rand = "0.8.5"
num = "0.4.0"
ndarray = "0.15.6"
dasp = { version = "0.11.0", features = ["signal", "interpolate", "interpolate-sinc", "ring_buffer"] }
GSL = "6.0.0"
clap = { version = "3.2.22", features = ["cargo"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.13"
snafu = "0.7.1"
